--- a/breviare/templates/index.html
+++ b/breviare/templates/index.html
@@ -9,27 +9,22 @@
     </div>
 
     <div class="row">
-        <div class="span4">
-            <h2>Django</h2>
-           <h2> {{ short_url }} </h2>
-            <p>Django is the excellent Python web framework that makes a programmer's life less repetitive.</p>
-
-            <p><a class="btn" href="http://www.djangoproject.com">View details &raquo;</a></p>
-        </div>
-        <div class="span4">
-            <h2>Bootstrap</h2>
-
-            <p>Bootstrap is a beautiful CSS framework with an optional JavaScript add-on.</p>
-
-            <p><a class="btn" href="http://twitter.github.com/bootstrap/">View details &raquo;</a></p>
-        </div>
-        <div class="span4">
-            <h2>django-bootstrap-toolkit</h2>
-
-            <p>Is just a simple hustle to get two kinds of awesome together.</p>
-
-            <p><a class="btn" href="https://github.com/dyve/django-bootstrap-toolkit/">View details &raquo;</a></p>
-        </div>
+   		<div class="well">
+	    <div id="form-holder" class="span11">
+			<form action="/shorten/" method="get">
+			    {% csrf_token %}
+			<div style="float:left; margin-right:5px;">
+			  <input type="text" placeholder="your url here" name="link">
+			</div> 
+			    <div class="actions" style="float:left">
+			        <button type="submit" class="btn primary">Shorten</button>
+			    </div>
+				<div id="result" style="float:left; margin-left:100px; margin-top:5px"><a href="{{short_url}}">{{short_url}} </a></div>
+			</form>
+		
+			</div>
+			
+		</div>
     </div>
 
     <p>Coding is sooo much fun </p>
