--- a/breviare/templates/index.html
+++ b/breviare/templates/index.html
@@ -19,7 +19,7 @@
 			    <div class="actions" style="float:left">
 			        <button type="submit" class="btn primary">Shorten</button>
 			    </div>
-				<div id="result" style="float:left; margin-left:100px; margin-top:5px"><a href="{{short_url}}">{{short_url}} </a></div>
+				<div id="result" style="float:left; margin-left:100px; margin-top:5px"><a href="{{short_url}}">{{short_url}} </a>{{no_link}}</div>
 			</form>
 		
 			</div>
